--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>e服务</title>
+    <title>easyService</title>
   </head>
   <body>
     <div id="app-box"></div>
